crux-llvm/test-data/golden/T785b.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/T785b.c:16:5: error: in main
[Crux]   Call to assert()
[Crux]   Details:
[Crux]     __assert_fail
[Crux] Overall status: Invalid.
